[gd_scene load_steps=14 format=3 uid="uid://dnd1cgnkhtxii"]

[ext_resource type="PackedScene" uid="uid://cm5q85rrtu357" path="res://scenes/card.tscn" id="1_4esw4"]
[ext_resource type="Script" path="res://scripts/cards_selector.gd" id="1_5rgu4"]
[ext_resource type="FontFile" uid="uid://dt55moadn75gc" path="res://assets/font/Roboto_Mono/static/RobotoMono-Bold.ttf" id="3_8mffk"]
[ext_resource type="FontFile" uid="uid://bl0n0ew13810g" path="res://assets/font/Roboto_Mono/static/RobotoMono-Light.ttf" id="3_nbdpa"]
[ext_resource type="Theme" uid="uid://0nf1kn3phpd8" path="res://assets/themes/scroll_theme.tres" id="4_k27pe"]
[ext_resource type="FontFile" uid="uid://it8yysnpsuds" path="res://assets/font/Roboto_Mono/static/RobotoMono-Medium.ttf" id="6_tjp2k"]
[ext_resource type="FontFile" uid="uid://b37frup74h7ef" path="res://assets/font/Roboto_Mono/static/RobotoMono-Italic.ttf" id="7_r8vph"]
[ext_resource type="PackedScene" uid="uid://5rm6deqt6hlv" path="res://scenes/deck_menu.tscn" id="8_3dyku"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_elaws"]
bg_color = Color(0.15, 0.15, 0.15, 0.784314)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.154876, 0.154876, 0.154876, 1)
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_acqvh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxke8"]
bg_color = Color(0.230315, 0.230315, 0.230315, 0.839216)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1a12v"]
bg_color = Color(0.230315, 0.230315, 0.230315, 0.839216)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bm1fn"]
bg_color = Color(0.230315, 0.230315, 0.230315, 0.839216)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CardsSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5rgu4")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 570
theme_override_constants/margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 500
theme_override_constants/margin_right = 15

[node name="Panel" type="Panel" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_elaws")

[node name="Cards" type="Node2D" parent="."]

[node name="Card" parent="Cards" instance=ExtResource("1_4esw4")]
position = Vector2(109, 690)

[node name="Card2" parent="Cards" instance=ExtResource("1_4esw4")]
position = Vector2(225, 690)

[node name="Card3" parent="Cards" instance=ExtResource("1_4esw4")]
position = Vector2(351, 690)

[node name="Card4" parent="Cards" instance=ExtResource("1_4esw4")]
position = Vector2(474, 690)

[node name="Card5" parent="Cards" instance=ExtResource("1_4esw4")]
position = Vector2(609, 690)

[node name="DeckCards" type="Label" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 412.0
offset_right = 266.0
offset_bottom = 461.0
theme_override_fonts/font = ExtResource("3_8mffk")
text = "Cards left 
before shuffle:"

[node name="Label" type="Label" parent="DeckCards"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 140.0
offset_top = -4.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "999"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Energy" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 469.0
offset_right = 261.0
offset_bottom = 504.0
theme_override_fonts/font = ExtResource("3_8mffk")
theme_override_font_sizes/font_size = 25
text = "Energy left: 5"

[node name="CurrentDeckTitle" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 721.0
offset_top = 509.0
offset_right = 925.0
offset_bottom = 663.0
theme = ExtResource("4_k27pe")
theme_override_fonts/normal_font = ExtResource("3_nbdpa")
theme_override_fonts/bold_font = ExtResource("6_tjp2k")
theme_override_font_sizes/normal_font_size = 10
theme_override_font_sizes/bold_font_size = 11
bbcode_enabled = true
text = "[b]Current deck contains:[/b]"

[node name="CurrentDeckContents" type="RichTextLabel" parent="CurrentDeckTitle"]
layout_mode = 0
offset_top = 14.0
offset_right = 192.0
offset_bottom = 190.0
theme = ExtResource("4_k27pe")
theme_override_fonts/normal_font = ExtResource("3_nbdpa")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "cards here"

[node name="PerformActiveLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 502.0
offset_top = 477.0
offset_right = 698.0
offset_bottom = 505.0
theme_override_fonts/normal_font = ExtResource("3_8mffk")
theme_override_fonts/italics_font = ExtResource("7_r8vph")
bbcode_enabled = true
text = "[i]Perform[/i] is active"

[node name="ShowDeckButton" type="Button" parent="."]
z_index = 3
layout_mode = 0
offset_left = 719.0
offset_top = 665.0
offset_right = 898.0
offset_bottom = 715.0
theme_override_fonts/font = ExtResource("3_8mffk")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_acqvh")
theme_override_styles/hover = SubResource("StyleBoxFlat_qxke8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1a12v")
theme_override_styles/normal = SubResource("StyleBoxFlat_bm1fn")
text = "Show/hide extensive
 deck display"

[node name="DeckMenu" parent="." instance=ExtResource("8_3dyku")]
z_index = 5
layout_mode = 1
offset_left = 40.0
offset_right = -600.0

[connection signal="pressed" from="ShowDeckButton" to="." method="_on_show_deck_button_pressed"]
